引入弱指针避免崩溃：执行回调时，回调所用的对象已经释放，造成程序崩溃

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ log/glog_test/log/a.out.debian8light.vimer.log.INFO.20160815-150125.71868
 net/socket_learn/client
 net/socket_learn/server
 tmp.sh
+/build/cmake_learn/Demo4/msvc
